--- a/k8s/apps/grafana/generated.yaml
+++ b/k8s/apps/grafana/generated.yaml
@@ -88,6 +88,7 @@ spec:
   resources:
     requests:
       storage: "50Gi"
+  storageClassName: longhorn-default
 ---
 # Source: grafana/templates/clusterrole.yaml
 kind: ClusterRole
