--- a/k8s/apps/grafana/helm/values.yaml
+++ b/k8s/apps/grafana/helm/values.yaml
@@ -349,7 +349,7 @@ extraContainerVolumes: []
 persistence:
   type: pvc
   enabled: true
-  # storageClassName: default
+  storageClassName: longhorn-default
   accessModes:
     - ReadWriteOnce
   size: 50Gi
