--- a/k8s/apps/systemd-exporter/daemonset.yaml
+++ b/k8s/apps/systemd-exporter/daemonset.yaml
@@ -23,7 +23,7 @@ spec:
       hostPID: true
       containers:
       - name: systemd-exporter
-        image: quay.io/prometheuscommunity/systemd-exporter:0.6.0
+        image: quay.io/prometheuscommunity/systemd-exporter:v0.6.0
         securityContext:
           privileged: true
         args:
