correct wildcard symbol

--- a/k8s/apps/systemd-exporter/daemonset.yaml
+++ b/k8s/apps/systemd-exporter/daemonset.yaml
@@ -29,7 +29,7 @@ spec:
         args:
         - --log.level=info
         - --systemd.collector.enable-restart-count
-        - --systemd.collector.unit-include=*.service
+        - --systemd.collector.unit-include=.*\.service
         ports:
         - name: metrics
           containerPort: 9558
