add retention to prom for clarity

--- a/k8s/apps/prometheus/prometheus.yaml
+++ b/k8s/apps/prometheus/prometheus.yaml
@@ -26,6 +26,7 @@ spec:
         resources:
           requests:
             storage: 100Gi
+  retention: 24hr
   replicas: 1
   shards: 1
   resources:
