demote rpi02 to worker role

--- a/ansible/inventory/homelab/homelab.ini
+++ b/ansible/inventory/homelab/homelab.ini
@@ -4,11 +4,10 @@ rpi03 ansible_host=192.168.0.249 ip=192.168.0.249
 
 [kube_control_plane]
 rpi01
-rpi02
 
 [kube_node]
 rpi01
-rpi02
+rpi02 node_labels='{"node-role.kubernetes.io/worker": ""}'
 rpi03 node_labels='{"node-role.kubernetes.io/worker": "", "node.longhorn.io/create-default-disk": "true", "nodegroup.zb/persistent-data": "true"}'
 
 [etcd]
