correct prom retention unit format

--- a/k8s/apps/prometheus/prometheus.yaml
+++ b/k8s/apps/prometheus/prometheus.yaml
@@ -26,7 +26,7 @@ spec:
         resources:
           requests:
             storage: 100Gi
-  retention: 24hr
+  retention: 24h
   replicas: 1
   shards: 1
   resources:
