increase log level for systemd

--- a/k8s/apps/systemd-exporter/daemonset.yaml
+++ b/k8s/apps/systemd-exporter/daemonset.yaml
@@ -27,7 +27,7 @@ spec:
         securityContext:
           privileged: true
         args:
-        - --log.level=info
+        - --log.level=debug
         - --systemd.collector.enable-restart-count
         ports:
         - name: metrics
