change log.level=info for systemd-exporter + re-introduce filter

--- a/k8s/apps/systemd-exporter/daemonset.yaml
+++ b/k8s/apps/systemd-exporter/daemonset.yaml
@@ -27,8 +27,9 @@ spec:
         securityContext:
           privileged: true
         args:
-        - --log.level=debug
+        - --log.level=info
         - --systemd.collector.enable-restart-count
+        - --systemd.collector.unit-include=.*\.service
         ports:
         - name: metrics
           containerPort: 9558
