--- a/k8s/apps/cadvisor/daemonset.yaml
+++ b/k8s/apps/cadvisor/daemonset.yaml
@@ -17,6 +17,8 @@ spec:
       containers:
       - name: cadvisor
         image: gcr.io/cadvisor/cadvisor:v0.47.2
+        securityContext:
+          privileged: true
         resources:
           requests:
             memory: 400Mi
