--- a/k8s/apps/cadvisor/daemonset.yaml
+++ b/k8s/apps/cadvisor/daemonset.yaml
@@ -20,7 +20,7 @@ spec:
         args:
         # really just want to blacklist /kubepods.slice since those are provided by kubelet out-the-box, 
         # but have to use whitelist
-        - --raw_cgroup_prefix_whitelist="/init.slice,/kube.slice,/system.slice,/user.slice,"
+        - --raw_cgroup_prefix_whitelist="/init.slice,/kube.slice,/system.slice,/user.slice"
         securityContext:
           privileged: true
         resources:
