--- a/k8s/apps/ingress-nginx/helm/values.yaml
+++ b/k8s/apps/ingress-nginx/helm/values.yaml
@@ -357,11 +357,11 @@ controller:
   ## Ideally, there should be no limits.
   ## https://engineering.indeedblog.com/blog/2019/12/cpu-throttling-regression-fix/
   resources:
-    ##  limits:
-    ##    cpu: 100m
-    ##    memory: 90Mi
+    limits:
+      cpu: 1
+      memory: 512Mi
     requests:
-      cpu: 100m
+      cpu: 500m
       memory: 128Mi
   # Mutually exclusive with keda autoscaling
   autoscaling:
