--- a/k8s/apps/cadvisor/kustomization.yaml
+++ b/k8s/apps/cadvisor/kustomization.yaml
@@ -3,8 +3,8 @@ namespace: monitoring
 commonLabels:
   app.zb/name: cadvisor
 
-resources:
-- daemonset.yaml
-- service.yaml
-- service-account.yaml
-- service-monitor.yaml
+resources: []
+# - daemonset.yaml
+# - service.yaml
+# - service-account.yaml
+# - service-monitor.yaml
