--- a/k8s/apps/gitlab/generated.yaml
+++ b/k8s/apps/gitlab/generated.yaml
@@ -1,6 +1,6 @@
 ---
 # Source: gitlab/charts/gitlab/charts/gitaly/templates/pdb.yaml
-apiVersion: v1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: gitlab-gitaly
@@ -19,7 +19,7 @@ spec:
       release: gitlab
 ---
 # Source: gitlab/charts/gitlab/charts/gitlab-shell/templates/pdb.yaml
-apiVersion: v1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: gitlab-gitlab-shell
@@ -38,7 +38,7 @@ spec:
       release: gitlab
 ---
 # Source: gitlab/charts/gitlab/charts/kas/templates/pdb.yaml
-apiVersion: v1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: gitlab-kas
@@ -57,7 +57,7 @@ spec:
       release: gitlab
 ---
 # Source: gitlab/charts/gitlab/charts/sidekiq/templates/pdb.yaml
-apiVersion: v1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: gitlab-sidekiq-all-in-1-v1
@@ -78,7 +78,7 @@ spec:
       queue-pod-name: all-in-1
 ---
 # Source: gitlab/charts/gitlab/charts/webservice/templates/pdb.yaml
-apiVersion: v1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: gitlab-webservice-default
@@ -101,7 +101,7 @@ spec:
       gitlab.com/webservice-name: default
 ---
 # Source: gitlab/charts/minio/templates/pdb.yaml
-apiVersion: v1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: gitlab-minio-v1
@@ -121,7 +121,7 @@ spec:
       component: app
 ---
 # Source: gitlab/charts/registry/templates/pdb.yaml
-apiVersion: v1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: gitlab-registry-v1
@@ -5149,7 +5149,7 @@ spec:
           medium: "Memory"
 ---
 # Source: gitlab/charts/gitlab/charts/gitlab-shell/templates/hpa.yaml
-apiVersion: v2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: gitlab-gitlab-shell
@@ -5171,10 +5171,15 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageValue: 100m
+        target:
+          type: AverageValue
+          averageValue: 100m
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
 ---
 # Source: gitlab/charts/gitlab/charts/kas/templates/hpa.yaml
-apiVersion: v2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: gitlab-kas
@@ -5196,10 +5201,15 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageValue: 100m
+        target:
+          type: AverageValue
+          averageValue: 100m
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
 ---
 # Source: gitlab/charts/gitlab/charts/sidekiq/templates/hpa.yaml
-apiVersion: v2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: gitlab-sidekiq-all-in-1-v2
@@ -5221,10 +5231,15 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageValue: 350m
+        target:
+          type: AverageValue
+          averageValue: 350m
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
 ---
 # Source: gitlab/charts/gitlab/charts/webservice/templates/hpa.yaml
-apiVersion: v2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: gitlab-webservice-default
@@ -5247,10 +5262,15 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageValue: 1
+        target:
+          type: AverageValue
+          averageValue: 1
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
 ---
 # Source: gitlab/charts/registry/templates/hpa.yaml
-apiVersion: v2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: gitlab-registry
@@ -5272,7 +5292,12 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageUtilization: 75
+        target:
+          type: Utilization
+          averageUtilization: 75
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
 ---
 # Source: gitlab/charts/gitlab/charts/gitaly/templates/statefulset.yml
 apiVersion: apps/v1
@@ -6632,7 +6657,7 @@ subjects:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: gitlab-webservice-test-runner-ukmbr
+  name: gitlab-webservice-test-runner-q8aie
   namespace: gitlab
   annotations:
     "helm.sh/hook": test
@@ -6671,7 +6696,7 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: gitlab-shared-secrets-1-hzf
+  name: gitlab-shared-secrets-1-ioj
   namespace: gitlab
   labels:
     app: gitlab
