--- a/k8s/apps/gitlab/helm/values.yaml
+++ b/k8s/apps/gitlab/helm/values.yaml
@@ -92,7 +92,7 @@ global:
 
   # Override the API version to use for HorizontalPodAutoscaler
   hpa:
-    apiVersion: "v2"
+    apiVersion: "autoscaling/v2"
 
   # Enable KEDA globally (https://keda.sh/)
   keda:
@@ -100,7 +100,7 @@ global:
 
   # Override the API version to use for PodDisruptionBudget
   pdb:
-    apiVersion: "v1"
+    apiVersion: "policy/v1"
 
   # Override the API version to use for CronJob
   batch:
