test simple gitlab deploy

--- a/k8s/apps/gitlab/kustomization.yaml
+++ b/k8s/apps/gitlab/kustomization.yaml
@@ -1,6 +1,9 @@
 kind: Kustomization
+namespace: gitlab
 commonLabels:
   app.zb/name: gitlab
 
-resources: []
-# - deploy.yaml
+resources:
+- deploy.yaml
+- ingress.yaml
+- service.yaml
