--- a/k8s/apps/gitlab/deploy.yaml
+++ b/k8s/apps/gitlab/deploy.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: gitlab
-          image: gitlab/gitlab-ce:latest
+          image: zengxs/gitlab:16.7.3-ce.0
           ports:
             - containerPort: 443
               name: https
