--- a/k8s/apps/openebs/helm/values.yaml
+++ b/k8s/apps/openebs/helm/values.yaml
@@ -734,7 +734,7 @@ cstor:
   # | - cstor(enable)
   # | | - openebs-ndm(disable)
   # | - openebs-ndm(enable)
-  enabled: false
+  enabled: true
   openebsNDM:
     enabled: false
 
