--- a/k8s/apps/openebs/helm/values.yaml
+++ b/k8s/apps/openebs/helm/values.yaml
@@ -282,7 +282,7 @@ ndm:
 # `ndmOperator.enabled: false` and enable it as dependency chart. If you are using
 # custom configuration then update those configuration under `openebs-ndm` key.
 ndmOperator:
-  enabled: false
+  enabled: true
   image: "openebs/node-disk-operator"
   imageTag: "2.1.0"
   replicas: 1
