correct comment in storageclass manifest

--- a/k8s/apps/openebs/cstor-storage-class.yaml
+++ b/k8s/apps/openebs/cstor-storage-class.yaml
@@ -18,4 +18,4 @@ parameters:
  replicaCount: "1"
  cstorPoolCluster: "cstor-disk-pool"
  cas-type: "cstor"
- cstorVolumePolicy: "csi-volume-policy" // policy created with replicaAffinity set to true
+ cstorVolumePolicy: "csi-volume-policy" # policy created with replicaAffinity set to true
