--- a/k8s/apps/openebs/cstor-storage-pool-cluster.yaml
+++ b/k8s/apps/openebs/cstor-storage-pool-cluster.yaml
@@ -9,6 +9,7 @@ spec:
       kubernetes.io/hostname: "rpi03"
     dataRaidGroups:
     - blockDevices:
-      - blockDeviceName: "blockdevice-2a4f7e882201347d8e56c21b90c75391"
+      # get after NDM daemonset pods are deployed
+      - blockDeviceName: "blockdevice-2a4f7e882201347d8e56c21b90c75391" # kubectl get blockdevice -n openebs
     poolConfig:
       dataRaidGroupType: "stripe"
