--- a/k8s/apps/openebs/cstor-storage-class.yaml
+++ b/k8s/apps/openebs/cstor-storage-class.yaml
@@ -11,6 +11,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: cstor-csi-disk
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: cstor.csi.openebs.io
 allowVolumeExpansion: true
 volumeBindingMode: WaitForFirstConsumer
