include all pod monitors for prom

--- a/k8s/apps/prometheus/prometheus.yaml
+++ b/k8s/apps/prometheus/prometheus.yaml
@@ -18,6 +18,8 @@ spec:
     runAsGroup: 65534
     runAsUser: 65534
   serviceAccountName: prometheus
+  podMonitorNamespaceSelector: {}
+  podMonitorSelector: {}
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
   storage:
