config grafana-sc for dashboard folder annotations + add dashboards

--- a/k8s/apps/grafana-dashboards/kustomization.yaml
+++ b/k8s/apps/grafana-dashboards/kustomization.yaml
@@ -4,13 +4,6 @@ commonLabels:
   app.zb/name: dashboards
   grafana_dashboard: 'true'
 
-generatorOptions:
-  disableNameSuffixHash: true
-
-configMapGenerator:
-- name: kubernetes-pods-containers
-  files:
-  - kubernetes-pods-containers.json
-- name: node-exporter
-  files:
-  - node-exporter.json
+resources:
+- kubernetes
+- openebs
