enforce dashboards sync-options to replacement

--- a/k8s/apps/grafana-dashboards/kustomization.yaml
+++ b/k8s/apps/grafana-dashboards/kustomization.yaml
@@ -1,5 +1,8 @@
 kind: Kustomization
 namespace: grafana
+commonAnnotations:
+  argocd.argoproj.io/sync-options: Replace=true
+
 commonLabels:
   app.zb/name: dashboards
   grafana_dashboard: 'true'
