us diff folder annotation

--- a/k8s/apps/grafana-dashboards/kubernetes/kustomization.yaml
+++ b/k8s/apps/grafana-dashboards/kubernetes/kustomization.yaml
@@ -1,7 +1,7 @@
 kind: Kustomization
 
 commonAnnotations:
-  grafana_dashboard_folder: kubernetes
+  grafana.zb/folder: kubernetes
 
 generatorOptions:
   disableNameSuffixHash: true
