--- a/k8s/apps/grafana-dashboards/openebs/kustomization.yaml
+++ b/k8s/apps/grafana-dashboards/openebs/kustomization.yaml
@@ -1,7 +1,7 @@
 kind: Kustomization
 
 commonAnnotations:
-  grafana_dashboard_folder: openebs
+  grafana.zb/folder: openebs
 
 generatorOptions:
   disableNameSuffixHash: true
