--- a/k8s/apps/grafana/helm/values.yaml
+++ b/k8s/apps/grafana/helm/values.yaml
@@ -921,7 +921,7 @@ sidecar:
     resource: both
     # If specified, the sidecar will look for annotation with this name to create folder and put graph here.
     # You can use this parameter together with `provider.foldersFromFilesStructure`to annotate configmaps and create folder structure.
-    folderAnnotation: grafana_dashboard_folder
+    folderAnnotation: grafana.zb/folder
     # Endpoint to send request to reload alerts
     reloadURL: "http://localhost:3000/api/admin/provisioning/dashboards/reload"
     # Absolute path to shell script to execute after a configmap got reloaded
