change grafana dashboard label

--- a/k8s/apps/grafana-dashboards/kustomization.yaml
+++ b/k8s/apps/grafana-dashboards/kustomization.yaml
@@ -5,7 +5,7 @@ commonAnnotations:
 
 commonLabels:
   app.zb/name: dashboards
-  grafana_dashboard: 'true'
+  grafana.zb/dashboard: 'true'
 
 resources:
 - kubernetes
