--- a/k8s/apps/grafana/generated.yaml
+++ b/k8s/apps/grafana/generated.yaml
@@ -251,7 +251,7 @@ spec:
             - name: METHOD
               value: WATCH
             - name: LABEL
-              value: "grafana_dashboard"
+              value: "grafana.zb/dashboard"
             - name: FOLDER
               value: "/tmp/dashboards"
             - name: RESOURCE
