--- a/k8s/apps/openebs/kustomization.yaml
+++ b/k8s/apps/openebs/kustomization.yaml
@@ -5,6 +5,6 @@ commonLabels:
 
 resources:
 - generated.yaml
-- cstor-storage-class.yaml
-- cstor-storage-pool-cluster.yaml
-- monitoring
+# - cstor-storage-class.yaml
+# - cstor-storage-pool-cluster.yaml
+# - monitoring
