remove longhorn label

--- a/ansible/inventory/homelab/homelab.ini
+++ b/ansible/inventory/homelab/homelab.ini
@@ -8,7 +8,7 @@ rpi01
 [kube_node]
 rpi01
 rpi02 node_labels='{"node-role.kubernetes.io/worker": ""}'
-rpi03 node_labels='{"node-role.kubernetes.io/worker": "", "node.longhorn.io/create-default-disk": "true", "nodegroup.zb/persistent-data": "true"}'
+rpi03 node_labels='{"node-role.kubernetes.io/worker": "", "nodegroup.zb/persistent-data": "true"}'
 
 [etcd]
 rpi01
