removing to re-create as new

--- a/k8s/apps/rook-ceph/ceph-cluster.yaml
+++ b/k8s/apps/rook-ceph/ceph-cluster.yaml
@@ -26,10 +26,11 @@ spec:
     enabled: true
   crashCollector:
     disable: true
+  skipUpgradeChecks: true
   storage:
     useAllNodes: false
     useAllDevices: false
-    deviceFilter: /dev/sda
+    deviceFilter: sda
   monitoring:
     enabled: false
   healthCheck:
