--- a/ansible/inventory/homelab/group_vars/all/all.yml
+++ b/ansible/inventory/homelab/group_vars/all/all.yml
@@ -36,7 +36,8 @@ loadbalancer_apiserver_healthcheck_port: 8081
 # disable_host_nameservers: false
 
 ## Upstream dns servers
-# upstream_dns_servers:
+upstream_dns_servers:
+- 192.168.0.1
 #   - 8.8.8.8
 #   - 8.8.4.4
 
