correect cephcluster schema

--- a/k8s/apps/rook-ceph/ceph-cluster.yaml
+++ b/k8s/apps/rook-ceph/ceph-cluster.yaml
@@ -25,7 +25,7 @@ spec:
     nodes:
     - name: rpi03
       devices:
-      - sda
+      - name: sda
   monitoring:
     enabled: false
   healthCheck:
