--- a/k8s/apps/rook-ceph/generated.yaml
+++ b/k8s/apps/rook-ceph/generated.yaml
@@ -185,7 +185,7 @@ data:
   ROOK_CEPH_ALLOW_LOOP_DEVICES: "false"
   ROOK_ENABLE_DISCOVERY_DAEMON: "false"
   ROOK_CSI_ENABLE_RBD: "true"
-  ROOK_CSI_ENABLE_CEPHFS: "true"
+  ROOK_CSI_ENABLE_CEPHFS: "false"
   CSI_ENABLE_CEPHFS_SNAPSHOTTER: "true"
   CSI_ENABLE_NFS_SNAPSHOTTER: "true"
   CSI_ENABLE_RBD_SNAPSHOTTER: "true"
