--- a/k8s/apps/rook-ceph/helm/values.yaml
+++ b/k8s/apps/rook-ceph/helm/values.yaml
@@ -80,7 +80,7 @@ csi:
   # -- Enable Ceph CSI RBD driver
   enableRbdDriver: true
   # -- Enable Ceph CSI CephFS driver
-  enableCephfsDriver: true
+  enableCephfsDriver: false
   # -- Enable host networking for CSI CephFS and RBD nodeplugins. This may be necessary
   # in some network configurations where the SDN does not provide access to an external cluster or
   # there is significant drop in read/write performance
