deploy prom-operator and prom

--- a/k8s/apps/prometheus-operator/kustomization.yaml
+++ b/k8s/apps/prometheus-operator/kustomization.yaml
@@ -3,8 +3,8 @@ namespace: monitoring
 commonLabels:
   app.zb/name: prometheus-operator
 
-resources: []
-# - bundle.yaml
+resources:
+- bundle.yaml
 
 patches:
 - target:
