--- a/k8s/apps/systemd-exporter/kustomization.yaml
+++ b/k8s/apps/systemd-exporter/kustomization.yaml
@@ -3,7 +3,7 @@ namespace: monitoring
 commonLabels:
   app.zb/name: systemd-exporter
 
-resources: []
-# - daemonset.yaml
-# - service.yaml
-# - service-monitor.yaml
+resources:
+- daemonset.yaml
+- service.yaml
+- service-monitor.yaml
