--- a/k8s/apps/rook-ceph/ceph-block-pool.yaml
+++ b/k8s/apps/rook-ceph/ceph-block-pool.yaml
@@ -29,3 +29,4 @@ parameters:
     csi.storage.k8s.io/fstype: ext4
 reclaimPolicy: Delete
 allowVolumeExpansion: true
+volumeBindingMode: WaitForFirstConsumer
