--- a/k8s/apps/rook-ceph/ceph-cluster.yaml
+++ b/k8s/apps/rook-ceph/ceph-cluster.yaml
@@ -8,6 +8,8 @@ spec:
   cephVersion:
     image: quay.io/ceph/ceph:v18
     allowUnsupported: true
+  cleanupPolicy:
+    confirmation: yes-really-destroy-data
   mon:
     count: 1
     allowMultiplePerNode: true
