remove nodeSelector for stateful workloads

--- a/k8s/apps/grafana/helm/values.yaml
+++ b/k8s/apps/grafana/helm/values.yaml
@@ -294,8 +294,7 @@ resources:
 ## Node labels for pod assignment
 ## ref: https://kubernetes.io/docs/user-guide/node-selection/
 #
-nodeSelector:
-  nodegroup.zb/persistent-data: 'true'
+nodeSelector: {}
 
 ## Tolerations for pod assignment
 ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
