attempt using subPath

--- a/k8s/apps/jhu-devops/gitlab/deploy.yaml
+++ b/k8s/apps/jhu-devops/gitlab/deploy.yaml
@@ -29,10 +29,13 @@ spec:
           volumeMounts:
             - name: gitlab
               mountPath: "/etc/gitlab"
+              subPath: gitlab
             - name: gitlab
               mountPath: "/var/log/gitlab"
+              subPath: gitlab
             - name: gitlab
               mountPath: "/var/opt/gitlab"
+              subPath: gitlab
       volumes:
         - name: gitlab
           persistentVolumeClaim:
